public/style.css
/*font-family: 'Abril Fatface', cursive;
  font-family: 'News Cycle', sans-serif;
  font-family: 'Noticia Text', serif;
  font-family: 'Sanchez', serif;*/

/* Color Palette */

:root {
    --deep-champagne: #F3CEA1;
    --dutch-white: #F3DFC1;
    --eerie-black: #1A1C1A;
}

body {
    display: grid;
}

header {
    background-color: var(--deep-champagne);
    border-bottom: solid 0.25vh var(--eerie-black);
    display: flex;
    height: 12vh;
    text-align: center;
    width: 100vw;
    justify-content:space-evenly;
    /* align-items:baseline; */
}

/* Website Title Styling */

#H {
    color: var(--eerie-black);
    display: flex;
    font-family: 'Abril Fatface', cursive;
    font-size: 3vh;
    justify-content: center;
    line-height: 3vh;
    margin-top: 0.5vh;
    width: 67vw;
    position:absolute;
    margin-left:auto;
    margin-right:auto;
    /* left:50% */

}

.M {
    position:absolute;
    left:10px;
}

/* Category Button Start */

#catBtn {
    align-items: center;
    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
    border: 1px solid var(--eerie-black);
    color: var(--eerie-black);
    color: var(--eerie-black);
    display: flex;
    font-family: 'News Cycle', sans-serif;
    font-size: 2vh;
    height: 5vh;
    justify-content: center;
    letter-spacing: 0.1vw;
    line-height: 2vh;
    margin-top: 1vh;
    margin-bottom: 1vh;
    margin-left: 75vw;
    margin-right: 1vw;
    padding: 0.25vw 0.5vh;
    position: absolute;
    text-decoration: none;
    text-transform: uppercase;
    touch-action: manipulation;
    user-select: none;
    -webkit-user-select: none;
    width: 23vw;
}

#catBtn:hover {
    background-color: var(--dutch-white);
    cursor: pointer;
}

#catBtn:focus {
    background-color: var(--dutch-white);
    cursor: grab;
}

#catBtn:active {
    box-shadow: 0px 0px 0px 0px;
    cursor: wait;
    left: 5px;
    top: 5px;
    
}

@media (min-width: 768px) {
  #catBtn {
    padding: 0.25vw 0.75vh;
  }
}

/* Category Button End */

#S {
    overflow: hidden;
}

#SB {
    margin-top: 1vh;
    margin-bottom: 1vh;
    display: flex;
    height: 12vh;
    border-bottom: 0.1vh solid black;
}

#SB-S {
    width: 100vw;
}

#SB-S-I {
    display: block;
    border: solid 1px black;
    border-radius: 3px;
    color: black;
    height: 5vh;
    width: 40vw;
    margin-left: 30vw;
    font-size: 2vh;
    line-height: 2vh;
    text-align: center;
    /* margin-left:auto;
    margin-right:auto; */
    left:50%
}

#SB-S-B {
    display: block;
    border: solid 1px black;
    border-radius: 3px;
    color: black;
    background-color: white;
    margin-top: 1vh;
    transition: all 0.3s ease-in-out;
    font-weight: bold;
    height: 5vh;
    width: 40vw;
    margin-left: 30vw;
    font-size: 2vh;
    line-height: 2vh;
    /* margin-left:auto;
    margin-right:auto; */
    left:50%
}

#SB-S-B:hover {
    opacity: 75%; 
    color: #1DA1F2;
    border: solid 1px black;
    overflow: hidden;
}

.content {
    display: block;
    display: flex;
    flex-wrap: wrap;
}

.content button {
    color: black;
}

#FML {
    width: 90vw;
    height: 15vh;
    display: flex;
    margin-left: 10vw;
}

/* Scroll Bar */

#outerDivWrapper, #outerDiv {
    height: 20vh;
    width: 44vw;
}
 
#scrollableContent {
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    margin-bottom: 2vh;
}

.vertical-scroll::-webkit-scrollbar {
    width: 2vw;
}
  
.vertical-scroll::-webkit-scrollbar-track {
    border-radius: 100vw;
}
  
.vertical-scroll::-webkit-scrollbar-thumb {
    background: hsl(0, 0%, 75%);
    border: 0.5vw solid hsl(0, 0%, 100%);
    border-radius: 100vw;
}

.vertical-scroll::-webkit-scrollbar-thumb:hover {
    background: hsl(0, 0%, 50%);
}

.W {
    display: flex; 
    height: 20vh;
    width: 40vw;
    margin-left: 2vw;
    font-size: 2vh;
    line-height: 5vh;
}

.W-C {
    width: 40vw;
    background-color: white;
}

.W-C-T {
    padding-top: 1vh;
    padding-bottom: 1vh;
    padding-left: 1vw;
    padding-right: 1vw;
    display: flex;
    justify-content: center;
}

.W-C-W {
    padding-top: 0.5vh;
    padding-bottom: 0.5vh;
    padding-left: 0.5vw;
    padding-right: 0.5vw;
}

.W-C-D {
    padding-top: 0.5vh;
    padding-bottom: 0.5vh;
    padding-left: 0.5vw;
    padding-right: 0.5vw;
}

/*.bigBtnBox {
    width: 100%;
    margin-left: 60px;
    height: 100px;
    margin-top: -10px;
    border-top: none;
    display: flex;
    justify-content: center;
    align-items: center;

}*/

.factsBorder {
    border-top: 2px solid black;
    border-left: 2px solid black;
    height: 40vh;
}

#outerDivWrapper2, #outerDiv2 {
    height: 20vh;
    width: 44vw;
    margin-left: 4vw;
}

#outerDivWrapper3, #outerDiv3 {
    height: 20vh;
    width: 44vw;
    margin-left: 2vw;
}

.bigBtnBox {
    width: 100vw;
    height: 10vh;
    border-top: none;
    display: flex;

}

.btnBox {
    color: white;
    height: 100%;
    margin-top: 0px;
    width: 100%;
    padding-left: 2.5vw;
    padding-right: 2.5vw;
    display: flex;
    border-radius: 20px;
    border-top: none;
    justify-content: center;
    align-items: center;
}

.Wbtn {
    /* border: solid 1px black; */
    width: calc(100%/3);
    height: 10vh;
    transition: all 0.3s ease-in-out;
    /* border-radius: 5px; */
    background-color: white;
    font-size: 1.4vh;
    margin-top: 2vh;
    margin-left: 1vw;
}

.Wbtn:hover {
    opacity: 75%;
    color: #1DA1F2;
    /* border: solid 2px black; */
}

#wordSave {
    width: 50%;
}

#wordRemove {
    width: 50%;
}

.P {
    border: solid 0px transparent;
    border-radius: 5px;
    display: flex;
    justify-content: flex-end;
    margin-left: calc(15vh + 2px);
    margin-right: calc(8vh + 2px);
}

#P1 {
   margin-top: 8vh;
   margin-bottom: 2vh;
}

#P2 {
    margin-bottom: 2vh;
}

.PB {
    /* border: none; */
    /* border-radius: 3px; */
    background-color: white;
    color: black;
    width: 10vw;
    height: 5vh;
    /* border: solid 1px black; */
    transition: all 0.3s ease-in-out;
    /* border-radius: 5px; */
    
}

.PB:hover {
    opacity: 75%; 
    color: #1DA1F2;
    border: solid 2px black;
}

.P-P {
    display: none;
}


#N {
    display: flex;
    justify-content: center;
    margin-top: 0px;
    height: 1600px;
    width: 100%;
}

#N-C {
    width: 100%;
    margin-left: 3vw;
    display: inline-flex;
    justify-content: center;
    flex-wrap: wrap;
}

.N-C-N {
    display: flex;
    height: 50vh;
    width: 44vw;
    margin-left: 1vw;
    margin-right: 1vw;
    /* border: solid 2px black; */
    /* border-radius: 4%; */
    justify-content: flex-end;
    align-items: flex-end;
}

.N-C-N:hover{ 
    cursor: pointer;
    opacity: 75%;
    transition: opacity 0.50s;
}

.title{ 
    background-color: whitesmoke;
    font-size: 2vh;
}

#B1, #B2, #B3, #B4, #B5, #B6 {
    background-size: contain, cover;
    background-position: center;
    background-repeat: no-repeat;
}

#bottomFooter {
    background-color: darkgoldenrod;
    background-color: #1DA1F2;
    position: relative;
    height: 135px;
    /* bottom:-100px; */
    width: 100vw;
    text-align: center;
    font-size: 40px;
}

#bottomFooter h2 {
font-size: 1.75vh;
}

#bottomFooter p {
font-size: 1.5vh;
}

footer {
background-color:#1DA1F2;
height: 3vh;
/* margin-top:60px; */
font-size: 3vh;
position: sticky;
bottom: 0px;
width: 100vw;
overflow: hidden;
text-align: center;
}

footer p {
    font-size: 2vh;
    color: white;
    left: 2000px;
    overflow-wrap: break-word;
    white-space: pre;
    overflow: hidden;
    width: max-content;
    position: relative;
}

.fa {
    padding-top: 2vh;
    padding-bottom: 2vh;
    padding-left: 2vw;
    padding-right: 2vw;
    font-size: 4vh;
    width: 2vw;
    height: 2vw;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
}

.fa:hover {
    opacity: 0.9;
    transform: scale(1.1);
}

@media screen and (max-width: 1200px) {

    #P2 {
        margin-top: 1vh;
     }

    .N-C-N {
        height: 400px;
        width: 50%;
    }

    #N-C {
        width: 100%;
        margin-left: 57.5px;
    }

    #N {
        height: 1300px;
    }
    
}

@media screen and (max-width: 1200px) {

    .N-C-N {
        height: 500px;
        width: 100%;
    }

    #N-C {
        width: 100%;
        margin-left: 57.5px;
    }

    #N {
        height: 3100px;
    }
    
}

@media screen and (max-width: 825px) {

    .N-C-N {
        height: 300px;
        width: 100%;
    }

    #N-C {
        width: 100%;
    }
    
    #N {
        height: 2500px;
    }

}

@media screen and (max-width: 700px) {

    #H h2 {
        font-size: 15px;
    }

    .title{
        font-size: 1.2vh;
    }

    .N-C-N {
        height: 300px;
        width: 100%;
    }

    #N-C {
        width: 100%;
    }

    #N {
        height: 1900px;
    }

}

@media screen and (max-width: 550px) {

    #H h2 {
        font-size: 10px;
    }

    #H h2 button{
        margin-left: 0px;
    }

    .N-C-N {
        height: 245px;
        width: 100%;
    }

    #N-C {
        width: 100%;
    }

    #N {
        height: 1500px;
    }
    
}

